safari left menu alignment issues

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -417,6 +417,7 @@ a:hover {
 .trpLeftMenuProfileMenu {
   display: none;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   margin-left: -10px;
   padding-bottom: 12px;
   overflow: hidden;
@@ -427,6 +428,7 @@ a:hover {
   line-height: 24px;
   padding-right: 20px;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
 
   a {
     color: white;
@@ -447,6 +449,16 @@ a:hover {
 
 .trpLeftMenuProfile:hover {
   background-color: rgba(255,255,255,0.2);
+}
+
+.trpLeftMenuLinkItem {
+  width: 100%; 
+  display: inline-block;
+  margin-bottom: 2px;
+  
+  span {
+    vertical-align: middle;
+  }
 }
 
 .trpLeftMenuProfileName {
@@ -534,7 +546,6 @@ a.trpMiniLeftMenuItem {
 .item-unread-badge {
   float: right; 
   margin-right: 5px; 
-  margin-top: 5px;
 }
 
 .trpMiniLeftMenuItem.unread:after {
@@ -574,6 +585,7 @@ a.trpMiniLeftMenuItem {
 	bottom: 20px;
 	overflow: hidden;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   padding: 0 10px;
   width: 100%;
 }
@@ -662,11 +674,13 @@ a.trpMiniLeftMenuItem {
 	margin: 0 0 0 0px;
   width: 100%;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   padding-right: 22px;
 
   li {
     padding-left: 10px;
     box-sizing: border-box;
+    -moz-box-sizing: border-box;
   }
 
   li:hover {
@@ -697,6 +711,7 @@ a.trpMiniLeftMenuItem {
   border: 1px solid rgba(255,255,255,0.6);
   display: inline-block;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
   padding: 4px 6px 6px 6px;
   margin-bottom: 2px;
   color: white;
@@ -762,6 +777,7 @@ a.trpMiniLeftMenuItem {
 .trpMenuTab {
  text-align: center;
   box-sizing:border-box;
+  -moz-box-sizing: border-box;
   color: white;
   font-family: 'Open Sans';
   font-size: 12px;
@@ -1529,6 +1545,7 @@ i.favourited:hover:before {
   opacity: 0.95;
   width: 300px;
   box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 
